last version from Anders

--- a/src/main/webapp/testPage.html
+++ b/src/main/webapp/testPage.html
@@ -23,6 +23,25 @@
         </tr>
     </table>
 </form>
+<table border="1">
+    <tr>
+        <td>
+            <a href="/cfutv/metadata/search?channelName=&from=&to=&title=nyhed&description=">Example: Title = nyhed</a>
+        </td>
+        <td>
+            <a href="/cfutv/metadata/search?channelName=tv2d&from=&to=&title=nyhed&description=">Example: Title = nyhed, Channel = tv2d</a>
+        </td>
+        <td>
+            <a href="/cfutv/metadata/search?channelName=&from=&to=&title=&description=dansk">Example: Description = dansk</a>
+        </td>
+        <td>
+            <a href="/cfutv/metadata/search?channelName=&from=&to=&title=&description=Amerikansk%20romantisk%20komedieserie">Example: description = Amerikansk romantisk komedieserie </a>
+        </td>
+        <td>
+            <a href="/cfutv/metadata/search?channelName=&from=2012-09-24_00%3A00&to=2012-09-25_15%3A35&title=&description=">Example (will be outdated: 2012-10-22) from = 2012-09-24_00:00 to = 2012-09-25_15:35 </a>
+        </td>
+    </tr>
+</table>
 <form name="fullpost" method="GET" action="metadata/fullpost">
     <table border="0">
         <tr><th colspan="2" align="left">Fullpost:</th></tr>
