Download service for files added

--- a/src/main/webapp/testPage.html
+++ b/src/main/webapp/testPage.html
@@ -91,5 +91,17 @@
             </td>
     </table>
 </form>
+
+<form name="fileDownload" method="GET" action="metadata/fileDownload">
+    <table border="0">
+        <tr><th colspan="2" align="left">File Download</th></tr>
+        <tr>
+            <td>Filename:<input type="text" name="filename"></td>
+            <td>
+                <input type="submit" value="Get" >
+            </td>
+    </table>
+</form>
+
 </body>
 </html>
